data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1712.wast
;; 3. **Test Description**: Implement a `br_if` within a `loop` structure, with a zero condition. Confirm that the loop continues executing and does not take the branch.

(assert_invalid
  (module
    (func $br_if_in_loop_with_zero_condition
      (loop $loop
        (i32.const 0)
        (br_if 0 (i32.const 0)) 
        (br_if $loop (i32.const 1))
      )
    )
  )
  "type mismatch"
)